--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,3 @@
-#version: "1.0.1-{build}"
-
 branches:
   only:
     - master
@@ -12,6 +10,8 @@ environment:
 init:
   - SET PATH=%GOPATH%\bin;%PATH%
   - git config --global core.autocrlf input
+  - for /f "delims=" %%a in ('git describe --tags') do @set version=%%a
+  - set BUILD_INFO_VERSION=%version%
 
 install:
   - go version
@@ -21,8 +21,6 @@ install:
   - go get -u github.com/tischda/go2xunit
 
 build_script:
-  - cd %APPVEYOR_BUILD_FOLDER%
-  - for /f "delims=" %a in ('git describe --tags') do @set version=%a
   - go build -ldflags "-X main.version %version% -s"
 
 test_script:
