--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,12 @@ branches:
   only:
     - master
 
-os: Windows Server 2012 R2
+image: Visual Studio 2019
 
 environment:
   GOPATH: c:\gopath
+  GO111MODULE: on
+  GOPROXY: https://proxy.golang.org  
 
 init:
   - SET PATH=%GOPATH%\bin;%PATH%
@@ -14,22 +16,21 @@ init:
 install:
   - go version
   - go env
-  - mkdir %GOPATH%
-  - go get -u github.com/tischda/go2xunit
+  - go install github.com/tischda/go2xunit@latest
 
 build_script:
   - for /f "delims=" %%a in ('git describe --tags') do @set version=%%a
   - ps: Update-AppveyorBuild -Version $env:version
-  - go build -ldflags "all=-X main.version=%version% -s"
+  - go build -mod vendor -ldflags=all="-X main.version=%version% -s -w"
 
 test_script:
-  - go-archetype.exe -version
+  - PROJECT_NAME.exe -version
   - go test -v -cover
-  - go test -v | go2xunit -xunitnet > xunit-report.xml
+  - go test -v | go2xunit.exe -xunitnet > xunit-report.xml
 
 artifacts:
-  - path: go-archetype.exe
-    name: go-archetype
+  - path: PROJECT_NAME.exe
+    name: PROJECT_NAME
 
 deploy: off
 
