--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,13 +24,13 @@ build_script:
   - go build -mod vendor -ldflags=all="-X main.version=%version% -s -w"
 
 test_script:
-  - PROJECT_NAME.exe -version
+  - ##PROJECT_NAME##.exe -version
   - go test -v -cover
   - go test -v | go2xunit.exe -xunitnet > xunit-report.xml
 
 artifacts:
-  - path: PROJECT_NAME.exe
-    name: PROJECT_NAME
+  - path: ##PROJECT_NAME##.exe
+    name: ##PROJECT_NAME##
 
 deploy: off
 
