--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -66,6 +66,7 @@ tasks:
       - rm -rf dist
       - rm -f releaseinfo
       - rm -f coverage.out
+      - rm -f resource.syso
 
   version:
     desc: Show version information
