--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,9 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
 name: Build
+permissions:
+  contents: read
+  pull-requests: read
 
 on:
   push:
@@ -24,3 +27,10 @@ jobs:
     - name: Build Windows binary
       run: |
         GOOS=windows GOARCH=amd64 go build
+
+  goreportcard:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run Go Report Card action
+        uses: creekorful/goreportcard-action@v1.0
