--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,20 +2,27 @@
 # https://github.com/mvdan/github-actions-golang/blob/master/.github/workflows/test.yml
 
 name: Test
+permissions:
+  contents: read
+  pull-requests: read
 
 on: [push, pull_request]
 
 jobs:
-  test-nocache:
-    strategy:
-      matrix:
-        go-version: [1.25.x]
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+  test:
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-go@v5
       with:
-        go-version: ${{ matrix.go-version }}
-        cache: false
-    - run: go test ./...
+        go-version: 1.25.x
+    - name: Run tests with coverage
+      shell: cmd
+      run: go test -v -race -covermode=atomic -coverprofile="coverage.out" ./...
+
+    # Upload coverage.
+    - name: Upload coverage to Coveralls
+      uses: coverallsapp/github-action@v2
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        path-to-lcov: coverage.out
